finished styling up to the news section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,12 +33,17 @@
         "styles/partials/_utils.scss",
         "styles/partials/_typography.scss",
         "styles/partials/_header.scss",
+        "styles/partials/_welcome.scss",
+        "styles/partials/_services.scss",
+        "styles/partials/_testimonials.scss",
+        "styles/partials/_sample.scss",
+        "styles/partials/_clients.scss",
         "styles/partials/_footer.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
