styled up to the gallery

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,6 +38,9 @@
         "styles/partials/_testimonials.scss",
         "styles/partials/_sample.scss",
         "styles/partials/_clients.scss",
+        "styles/partials/_news.scss",
+        "styles/partials/_questions.scss",
+        "styles/partials/_gallery.scss",
         "styles/partials/_footer.scss"
       ]
     }
